--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,27 @@
-[package]
-name = "password_manager"
+[workspace]
+resolver = "2"
+members = [
+    "rs-password-manager",
+    "rs-password-manager-cli"
+]
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+authors = ["Your Name <your.email@example.com>"]
+repository = "https://github.com/yourusername/rs_password_manager"
 
-[dependencies]
+[workspace.dependencies]
 clap = { version = "4.0", features = ["derive"] }
 rpassword = "7.0"
 aes = "0.7"
 rand = "0.8"
 serde = { version = "1.0", features = ["derive"] }
 config = "0.14.0"
+serde_json = "1.0"
+tempfile = "3.2"
+argon2 = "0.5"
+base64 = "0.21"
+zeroize = "1.6"
+thiserror = "1.0"
